time productivity update

--- a/index.html
+++ b/index.html
@@ -13,53 +13,55 @@
 <body>
  <div id = "imagen">
    <div class = "texto">
-    <p id = "p1"> Cuando llega el fin de semana y pienso</p>
-    <h1>Qué pedo? Qué hacemos hoy?</h1>
-    <p id = "p2">Siempre recuerdo...</p>
+    <p id = "p1">Cuando haya tiempo libre</p>
+    <h1>Algunas ideas para aprovechar el tiempo</h1>
+    <p id = "p2">Siempre recuerda...</p>
    </div> 
   </div>
   <section id = "subheader">
-    <h3>Cosas que <span>NO</span> deberías hacer un viernes por la mañana: El hecho de que tengas el tiempo y las ganas <span>NO</span> significa que tengas buenas ideas.
+    <h3>Esta es una lista de cosas que <span>Sí</span> deberías estar haciendo con tu tiempo libre. Es un arte saber administrar y se complica cuando se trata de un activo finito que no puede ser recuperado como el tiempo.
     </h3>
     </section>
     <main class = "lista">
       
       <div class = "group">
         <h4 class = number>1</h4>
-        <p>Prenderle fuego al refrigerador para ver si eso regula el puto frío que hace</p>
+        <p>Leer libros tanto de negocios como de literatura universal</p>
       </div>
       <div class = "group">
         <h4 class = number>2</h4>
-        <p>Tomar tonayan, azulito o cualquier otra bebida embriagante de calidad</p>
+        <p>Crear y mantener tu red de amigos. Las amistades son esenciales para el crecimiento tanto personal como profesional.</p>
       </div>
       <div class = "group">
         <h4 class = "number">3</h4>
-        <p>Jugar a que el piso es lava hasta que se meta el sol</p>
+        <p>Aprender una habilidad de ingresos altos. Aprender a hacer algo que te asegure ingresos estables en el futuro sin importar qué suceda te permite asegurar un estilo de vida.</p>
       </div>
       <div class = "group">
         <h4 class = "number">4</h4>
-        <p>Fumar mota</p>
+        <p>Aprender algo nuevo que descononozcas en su totalidad o no te guste.</p>
       </div>
       <div class = "group">
         <h4 class = "number">5</h4>
-        <p>Pedirle a un compa que role sus nudes</p>
+        <p>Encontrar un deporte que te apasione.</p>
       </div>
       <div class = "group">
         <h4 class = "number">6</h4>
-        <p>Inyectarse café</p>
+        <p>Viajar</p>
       </div>
       <div class = "group">
         <h4 class = "number">7</h4>
-        <p>Llamarle a tu suegra para preguntarle quién ganaría un tiro limpio entre AMLO y el Pilón sin anillos</p>
+        <p>Ponerte en situaciones incomodas</p>
       </div>
       <div class = "group">
         <h4 class = "number">8</h4>
-        <p>Comer resistol</p>
+        <p>practicar la terapia del rechazo</p>
       </div>
     </main>
+
+    <!--  
 <div class = "centro">    
   <h1>¿Qué hay de nuevo?</h1>
-</div>
+</div> -->
   
 </body>
 </html>
